# turntable

./: .gitignore  Cargo.toml  LICENSE  README.md  generator.toml.example
src/: cli.rs  config.rs  generator.rs  lib.rs  main.rs  parser.rs  transform.rs  webdav.rs
src/config/: certificate.rs  dns.rs  endpoint.rs  experimental.rs  inbound.rs  log.rs  ntp.rs  outbound.rs  route.rs  serde_helpers.rs  service.rs  shared.rs  util.rs  validation.rs  version.rs
src/generator/: cache.rs  diff.rs  generator_config.rs  helpers.rs  subscription.rs
src/parser/: base64.rs  detection.rs  protocols.rs
src/parser/protocols/: anytls.rs  hysteria2.rs  shadowsocks.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
tests/: sing_box_113_config_tests.rs  sing_box_114_config_tests.rs
