[package]
name = "turntable"
version = "0.3.5"
authors = ["ajuniezeng <me@ajunie.com>"]
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# CLI
clap = { version = "4.5.54", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"

# HTTP client
reqwest = { version = "0.13.1", features = ["json"] }

# URL handling
url = { version = "2.5.8", features = ["serde"] }

# Encoding
base64 = "0.22.1"
urlencoding = "2.1.3"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Interactive prompts
dialoguer = "0.12"
